<resources>
    <string name="app_name">Prueba 1</string>
    <string name="author">Pedro Villar Sandoval</string>

    <string name="name_hint_edit_text">NOMBRE</string>
    <string name="next_button">CONTINUAR</string>
    <string name="back_button">VOLVER</string>
    <string name="finish_button">FINALIZAR</string>

    <string name="male_radio_button">Masculino</string>
    <string name="female_radio_button">Femenino</string>


    <string name="select_gender_txt">Selecciona genero:</string>
    <string name="please_enter_name">Favor ingresa tu Nombre</string>
    <string name="please_select_gender">Favor selecciona Genero</string>
    <string name="problem_with_selection">Error interno</string>

    <string name="message_day">Mejorando el día</string>
    <string name="message_day_male">, eres el mejor, SALUD!!!</string>
    <string name="message_day_female">, eres la mejor y la más hermoza!!!</string>

    <string name="title_share_image">Compartir imagen</string>

    <string name="permission_denied_read_external_extorage">Permiso denegado para guardar imagen en almacenamiento externo, favor permitir acceso.</string>
</resources>
