<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/input_padding"
    tools:context="com.anpetrus.prueba1.ContentFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/nameEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_hint_edit_text"
            android:inputType="textCapCharacters"
            android:maxLines="1"
            android:textAlignment="center"
            android:visibility="gone" />

        <RadioGroup
            android:id="@+id/genderGroupRb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="Selecciona genero: "
                android:textSize="16dp"/>

            <RadioButton
                android:id="@+id/genderMaleRb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/male_radio_button"
                />

            <RadioButton
                android:id="@+id/genderFemaleRb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/female_radio_button" />
        </RadioGroup>
    </LinearLayout>

    <Button
        android:id="@+id/nextBtn"
        android:background="@color/colorAccent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next_button" />

    <Button
        android:id="@+id/backBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back_button"
        android:visibility="visible" />
</LinearLayout>
